--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ sms.provider.requestType=POST
 sms.provider.url=https://msdgweb.mgov.gov.in/esms/sendsmsrequestDLT
 sms.provider.contentType=application/json
 sms.provider.username=hckerala
-sms.provider.password=Sm\$Temp1
+sms.provider.password=Sm$Temp1
 sms.verify.response = true
 sms.print.response = true
 sms.verify.responseContains="success":true
